# RagReive

./: Dockerfile.api  Dockerfile.dash  README.md  config.py  docker-compose.yml  pyproject.toml  seed.py
.kiro/specs/hybrid-rag-pipeline/: .config.kiro  design.md  requirements.md  tasks.md
api/: main.py  middleware.py  models.py  routes.py
dashboard/: app.py
data/: eval_dataset.json
data/corpus/: api_docs.md  changelog.md  deployment_runbook.md  evaluation_plan.md  onboarding_faq.txt  retrieval_notes.md  security.html  troubleshooting.md
data/eval_cache/: responses_1d6053d08aca.json  responses_296e3f446c4a.json  responses_2e559769f153.json  responses_89b075d5c4c4.json  responses_9467d6ace1b9.json  responses_a8c9188c2a69.json
eval/: dataset.py  harness.py  metrics.py  report.md  report_generator.py
generation/: citation_verifier.py  confidence.py  generator.py
ingestion/: chunkers.py  deduplication.py  models.py  parsers.py  pipeline.py
retrieval/: bm25_index.py  dense_retriever.py  embedder.py  reranker.py  rrf_fusion.py  sparse_retriever.py  vector_store.py
tests/: test_bm25_index.py  test_chunkers.py  test_embedder.py  test_generation.py  test_rrf_fusion.py
